# test_app

./: .env_sample  .gitignore  pyproject.toml
config/: settings.py  urls.py
mainapp/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
